Code review fixes [#184851077]
