# middleware/auth.ts
@@ -2,7 +2,7 @@ import { NextFunction, Request, Response } from 'express';
 import { verifySession } from '../utils/verifySession';
 
 export const auth = async (req: Request, res: Response, next: NextFunction) => {
-	const token = req.header('token');
+	const token = req.header('Authorization');
 
 	if (!token) {
 		res.status(400).json({errorMessage: 'Missing auth header'});
